SERVER-20335 Mongos now forwards batchSize of none instead of 0

Closes #1018

Signed-off-by: David Storch <david.storch@10gen.com>